--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
             
             try {
                 // Simular chamada à API (substitua pela sua integração real)
-                const response = await fetch('https://checkout.onrender.com/create-pix', {
+                const response = await fetch('https://checkoutt-68li.onrender.com/create-pix', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ 
