--- a/index.html
+++ b/index.html
@@ -679,12 +679,13 @@
         }
         .copy-pix-btn-new {
             width: 100%;
-            padding: 12px;
+            padding: 14px;
             border: 1px solid #0B6856;
             background-color: white;
             color: #0B6856;
             border-radius: 8px;
             font-weight: 600;
+            font-size: 16px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -693,12 +694,13 @@
         }
         .payment-done-btn {
             width: 100%;
-            padding: 12px;
+            padding: 14px;
             border: none;
             background-color: #16a34a;
             color: white;
             border-radius: 8px;
             font-weight: 600;
+            font-size: 16px;
             cursor: pointer;
         }
 
